fixed mgmt/update route not working, added result handling too.

--- a/master/package.json
+++ b/master/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "axios": "^0.24.0",
     "caller-id": "^0.1.0",
+    "child_process": "^1.0.2",
     "crypto": "^1.0.1",
     "delay": "^5.0.0",
     "events": "^3.3.0",
