Adding Cloudlfare Integration for automatically syncing the Master's ip with the main subdomain

--- a/master/package.json
+++ b/master/package.json
@@ -8,12 +8,14 @@
     "child_process": "^1.0.2",
     "crypto": "^1.0.1",
     "delay": "^5.0.0",
+    "dotenv": "^10.0.0",
     "events": "^3.3.0",
     "isomorphic-fetch": "^3.0.0",
     "json-server": "^0.17.0",
     "moment": "^2.29.1",
     "nodemon": "^2.0.14",
     "random-number-csprng": "^1.0.2",
+    "request": "^2.88.2",
     "signale": "^1.4.0"
   },
   "devDependencies": {},
