--- a/master/package.json
+++ b/master/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "dependencies": {
     "axios": "^0.24.0",
+    "body-parser": "^1.19.0",
     "caller-id": "^0.1.0",
     "child_process": "^1.0.2",
     "crypto": "^1.0.1",
