--- a/slave/l7/source/canavarslave.service
+++ b/slave/l7/source/canavarslave.service
@@ -1,10 +1,10 @@
 [Unit]
-Description=canavar-layer7
+Description=canavar-slave
 After=network.target
 
 [Service]
 Type=simple
-ExecStart=/usr/bin/node /canavarl7/index.js
+ExecStart=/usr/bin/node /canavarslave/index.js
 Restart=on-failure
 
 [Install]
