--- a/master/package.json
+++ b/master/package.json
@@ -1,9 +1,11 @@
 {
-  "name": "master",
-  "version": "1.0.0",
+  "name": "c.a.n.a.v.a.r",
+  "version": "0.0.2",
+  "description": "Good-faith botnet, WIP",
   "main": "index.js",
   "dependencies": {
     "axios": "^0.24.0",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "caller-id": "^0.1.0",
     "child_process": "^1.0.2",
@@ -11,8 +13,10 @@
     "delay": "^5.0.0",
     "dotenv": "^10.0.0",
     "events": "^3.3.0",
+    "express": "^4.17.1",
     "isomorphic-fetch": "^3.0.0",
     "json-server": "^0.17.0",
+    "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
     "nodemon": "^2.0.14",
     "random-number-csprng": "^1.0.2",
@@ -24,13 +28,14 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "nodemonConfig": {
-    "ignore": [
-      "*.json"
-    ]
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/mehmetefeerkan/C.A.N.A.V.A.R.git"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": ""
+  "author": "mehmet efe erkan | ephesus",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/mehmetefeerkan/C.A.N.A.V.A.R/issues"
+  },
+  "homepage": "https://github.com/mehmetefeerkan/C.A.N.A.V.A.R#readme"
 }
