--- a/master/package.json
+++ b/master/package.json
@@ -9,6 +9,7 @@
     "body-parser": "^1.19.0",
     "caller-id": "^0.1.0",
     "child_process": "^1.0.2",
+    "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "delay": "^5.0.0",
     "dotenv": "^10.0.0",
