--- a/master/package.json
+++ b/master/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^10.0.0",
     "events": "^3.3.0",
     "express": "^4.17.1",
+    "firebase-admin": "^10.0.0",
     "isomorphic-fetch": "^3.0.0",
     "json-server": "^0.17.0",
     "jsonwebtoken": "^8.5.1",
