--- a/functions/package.json
+++ b/functions/package.json
@@ -13,6 +13,7 @@
   },
   "main": "index.js",
   "dependencies": {
+    "delay": "^5.0.0",
     "firebase-admin": "^9.8.0",
     "firebase-functions": "^3.14.1"
   },
